--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,9 +25,76 @@ body
 
 .painel img
 {
-  float: right;
-  max-width: 25%;
+  float: left;
+  max-width: 100%;
   height: auto;
+}
+
+.painel ul
+{
+  display: grid;
+  grid-template-columns: 25% auto auto auto;
+  margin: 0;
+  padding: 0;
+}
+
+.painel li
+{
+  list-style-type: none;
+  text-align: center;
+}
+
+.dropbtn {
+  background-color: transparent;
+  color: white;
+  font-size: 1em;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  transition: 0.3s;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  font-size: 1.2em;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 25px black;;
+  transform: translate(-50%);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover
+{
+  background-color: #555;
+  color: white;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  font-size: 1.3em;
 }
 
 .controle-janelas
@@ -110,4 +177,13 @@ footer .contato-sistema
 .contato-sistema a:hover
 {
   color: hotpink;
+}
+
+.construcao
+{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 10em;
+  transform: translate(-50%,-50%);
 }
