--- a/public/css/show.css
+++ b/public/css/show.css
@@ -1,3 +1,9 @@
+:root
+{
+  --cor-button: crimson;
+  --cor-button-contraste: #a30f2d;
+}
+
 .detalhes
 {
   margin: auto;
@@ -28,12 +34,14 @@
 
 .formulario-detalhes input
 {
+  font-size: 1.2em;
   margin-bottom: 1em;
+  text-align: center;
 }
 
 .formulario-detalhes button
 {
-  background-color: crimson;
+  background-color: var(--cor-button);
   border: none;
   border-radius: 0.3em;
   box-shadow: 1px 1px 15px grey;
@@ -42,10 +50,11 @@
   font-weight: bold;
   padding: 0.5em;
   margin-top: 1.5em;
+  transition: 0.3s;
   width: 100%;
 }
 
 .formulario-detalhes button:hover
 {
-  
+  background-color: var(--cor-button-contraste);
 }
