Dimensionamento máximo da coluna de descrição de peça

--- a/public/css/listapecas.css
+++ b/public/css/listapecas.css
@@ -17,6 +17,11 @@ table .mostra-itens:focus
   outline: none;
 }
 
+table [name="descricao-peca"]
+{
+  max-width: 25em;
+}
+
 table .copia
 {
   background-image: linear-gradient(to right, white, #e6e6e6);
