--- a/public/css/tabelas.css
+++ b/public/css/tabelas.css
@@ -46,17 +46,28 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
+  transition: 0.3s;
   width: 70%;
+}
+
+.cabecalho-elementos button:hover
+{
+  background-color: var(--cor-button-1-contraste);
 }
 
 .lista-elementos button
 {
-  background-color: #555;
+  background-color: var(--cor-button-2);
   border: none;
   border-radius: 0.3em;
   color: white;
   padding: 0.2em;
   width: 30%;
+}
+
+.lista-elementos button:hover
+{
+  background-color: var(--cor-button-2-contraste);
 }
 
 .lista-elementos table
@@ -88,6 +99,7 @@
   border-bottom: solid 1px lightgrey;
   font-size: 1em;
   padding: 0.5em;
+  min-width: 10em;
 }
 
 .fa-user-clock
